Updated html & css files

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,12 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <main>
+    <div class="top top-left"></div>
+    <div class="top top-right"></div>
+    <div class="bottom bottom-left"></div>
+    <div class="bottom bottom-middle"></div>
+    <div class="bottom bottom-right"></div> 
+  </main>
 </body>
 </html>
