--- a/position-exercise.html
+++ b/position-exercise.html
@@ -16,10 +16,10 @@
   <!-- your styles go in position-page.css -->
   <link rel="stylesheet" type="text/css" href="styles/position-page.css">
 </head>
-<body>
+<body class="background">
   <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
-  <nav>
-    <img src="images/icon.png">
+  <nav class="navbar">
+    <img src="images/icon.png"> 
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="display-exercise.html">display</a></li>
@@ -27,8 +27,13 @@
     </ul>
   </nav>
 
-  <main>
+  <main class="content">
     <!-- Put the HTML you need to accomplish the design -->
+    <div class="hero-image">
+      <div class="dots"></div>
+      <img src="images/spacecat.png" class="spacecat">
+      <img src="images/spacedog.png" class="spacedog">
+
   </main>
 </body>
 </html>
